<resources>
    <string name="app_name">Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="del">DEL</string>
    <string name="equal">=</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="mul">*</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="decimal">.</string>
    <string name="div">/</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="zero">0</string>
    <string name="pow">^</string>
    <string name="clear">CLR</string>
</resources>
